kubernetes/apps/default/cctv/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cctv
  namespace: default
spec:
  clusterIP: None
  clusterIPs:
  - None
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8090
  - name: stun
    port: 3478
    protocol: UDP
    targetPort: 3478
  - name: turn0
    port: 50000
    protocol: UDP
    targetPort: 50000
  - name: turn1
    port: 50001
    protocol: UDP
    targetPort: 50001
  - name: turn2
    port: 50002
    protocol: UDP
    targetPort: 50002
  - name: turn3
    port: 50003
    protocol: UDP
    targetPort: 50003
  - name: turn4
    port: 50004
    protocol: UDP
    targetPort: 50004
  - name: turn5
    port: 50005
    protocol: UDP
    targetPort: 50005
  - name: turn6
    port: 50006
    protocol: UDP
    targetPort: 50006
  - name: turn7
    port: 50007
    protocol: UDP
    targetPort: 50007
  - name: turn8
    port: 50008
    protocol: UDP
    targetPort: 50008
  - name: turn9
    port: 50009
    protocol: UDP
    targetPort: 50009
  - name: turn10
    port: 50010
    protocol: UDP
    targetPort: 50010
  sessionAffinity: None
  type: ClusterIP
